--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,8 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.10'
     implementation 'com.github.d-max:spots-dialog:1.1@aar'
+    implementation 'androidx.room:room-rxjava2:2.2.0-rc01'
+    annotationProcessor 'androidx.room:room-compiler:2.2.0-rc01'
 
     implementation 'com.firebaseui:firebase-ui-auth:5.0.0'
     implementation 'com.asksira.android:loopingviewpager:1.1.4'
@@ -59,5 +61,7 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.1.1'
     implementation 'com.github.andremion:counterfab:1.2.0'
     implementation 'com.cepheuen.elegant-number-button:lib:1.0.2'
+
+    implementation 'com.github.andremion:counterfab:1.2.2-alpha1'
 
 }
